--- a/style/generally.scss
+++ b/style/generally.scss
@@ -4,7 +4,9 @@ html,
 body {
   scroll-behavior: smooth;
 }
-
+.all_body{
+  overflow: hidden;
+}
 // logo
 .logo {
   width: 1200px;
@@ -123,6 +125,7 @@ body {
         width: 100%;
         padding: 10px 0;
         text-align: center;
+        font-weight: bolder;
         @keyframes aa {
           from {
             transform: translateY(-100%);
@@ -139,6 +142,7 @@ body {
             align-items: center;
             justify-content: center;
             animation: aa 0.5s forwards;
+            font-weight: bolder;
             background-color: #97999b;
             &:hover {
               background-color: #a2d7f1;
