--- a/style/online.scss
+++ b/style/online.scss
@@ -5,7 +5,9 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
-
+.all_body{
+  overflow: hidden;
+}
 // logo
 .logo {
   width: 1200px;
@@ -196,6 +198,7 @@ body {
   }
 }
 
+
 // reservation_title
 .reservation_title {
   border-top: 1px solid #dedede;
@@ -204,6 +207,9 @@ body {
     display: flex;
     justify-content: center;
     position: relative;
+    @include rwd(768) {
+      display: none;
+    }
     li {
       padding: 10px 0;
       height: 60px;
@@ -302,10 +308,15 @@ body {
 // process
 .process {
   width: 1000px;
+
   height: 1px;
-  margin: 150px auto 0;
+  margin: 150px auto 0 ;
   background-color: #97999b;
   position: relative;
+  @include rwd(1100){
+    width: auto;
+    margin: 150px 50px 0 20px;
+  }
   ul {
     display: flex;
     li {
@@ -380,7 +391,7 @@ body {
 
 // collection_list
 .collection_list {
-  width: 1200px;
+  // width: 1200px;
   margin: 0 auto;
   display: flex;
   .collection_item {
@@ -388,6 +399,12 @@ body {
     margin: 0 auto;
     .slick-list {
       max-width: 700px;
+      @include rwd(768){
+        max-width: 500px;
+      }
+      @include rwd(550){
+        max-width: 400px;
+      }
       .slick-track {
         max-width: 900%;
       }
@@ -420,6 +437,11 @@ body {
   padding: 20px 0;
   margin: 0 auto;
   display: flex;
+  justify-content: center;
+  @include rwd(768){
+    width: auto;
+    justify-content: center;
+  }
   select {
     padding: 5px 10px;
   }
@@ -427,11 +449,16 @@ body {
     padding-right: 20px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
   }
   .rooms_number {
     padding: 0 20px 0 50px;
     display: flex;
     align-items: center;
+    white-space: nowrap;
+    @include rwd(768){
+      padding: 0 20px;
+    }
   }
 }
 
@@ -441,6 +468,15 @@ body {
   margin: 0 auto;
   border: 1px solid #000;
   border-radius: 20px 20px 0 0;
+  @include rwd(1200){
+    max-width: 700px;
+  }
+  @include rwd(768){
+    max-width: 500px;
+  }
+  @include rwd(550){
+    max-width: 480px;
+  }
   .fc-header-toolbar {
     position: relative;
     justify-content: center;
@@ -498,19 +534,36 @@ body {
 .collection_day {
   width: 1200px;
   margin: 0 auto;
+  padding-left: 10px;
+  @include rwd(768){
+    width: auto;
+  }
   .rooms_days {
     display: flex;
     justify-content: space-evenly;
     position: relative;
     padding: 100px 0 20px 0;
+    @include rwd(768){
+      justify-content: flex-start
+    }
+    .form-group{
+      display: flex;
+      select{
+        height: 19px;
+      }
+    }
     .form-row {
       p {
         padding-right: 5px;
+        white-space: nowrap;
       }
       display: flex;
     }
     span {
       padding: 0 10px;
+      @include rwd(768){
+        padding: 0 5px;
+      }
     }
     .middle {
       border-right: 1px dotted #787878;
@@ -522,6 +575,7 @@ body {
       display: flex;
       p {
         padding-right: 5px;
+        white-space: nowrap;
       }
       select {
         height: 19px;
@@ -537,6 +591,7 @@ body {
       background-color: #97999b;
       font-size: 14px;
       color: #fff;
+     
     }
   }
 }
@@ -548,6 +603,9 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+  @include rwd(768){
+    width: auto;
+  }
   p {
     padding: 10px 30px;
     background-color: #97999b;
@@ -566,6 +624,9 @@ body {
   width: 1200px;
   margin: 20px auto 0;
   padding-left: 20px;
+  @include rwd(768){
+    width: auto;
+  }
   .collect_rooms {
     margin: 5px 0 10px 0;
     span {
