--- a/style/reservation.css
+++ b/style/reservation.css
@@ -171,6 +171,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.all_body {
+  overflow: hidden;
+}
+
 .logo {
   width: 1200px;
   height: 220px;
@@ -299,6 +303,7 @@ body {
     width: 100%;
     padding: 10px 0;
     text-align: center;
+    font-weight: bolder;
   }
   @keyframes aa {
     from {
@@ -317,6 +322,7 @@ body {
     align-items: center;
     justify-content: center;
     animation: aa 0.5s forwards;
+    font-weight: bolder;
     background-color: #97999b;
   }
   .menu_item ul li .item_llst p:hover {
@@ -367,6 +373,10 @@ body {
   left: 80%;
 }
 
+.reservation_title {
+  border-top: 1px solid #dedede;
+  border-bottom: 1px solid #dedede;
+}
 .reservation_title ul {
   display: flex;
   justify-content: center;
@@ -485,7 +495,6 @@ body {
 
 .reservation_box {
   width: 1200px;
-  margin: 0 auto;
   display: flex;
   padding-bottom: 100px;
 }
