--- a/style/rooms_item.css
+++ b/style/rooms_item.css
@@ -488,7 +488,6 @@ body {
 
 .reservation_box {
   width: 1200px;
-  margin: 0 auto;
   display: flex;
   padding-bottom: 100px;
 }
@@ -496,7 +495,7 @@ body {
   padding-right: 100px;
 }
 .reservation_box .reservation_left_box .reservation_left_box_title .title {
-  padding-top: 80px;
+  margin-top: 80px;
   font-size: 12px;
 }
 .reservation_box .reservation_left_box .reservation_item {
@@ -505,6 +504,16 @@ body {
   padding: 10px 0 20px;
   margin-top: 20px;
   position: relative;
+  z-index: 2;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_left_box .reservation_item {
+    transform: translateX(-100%);
+    transition: all 0.5s;
+  }
+  .reservation_box .reservation_left_box .reservation_item:hover {
+    transform: translateX(0);
+  }
 }
 .reservation_box .reservation_left_box .reservation_item .generally_reserve,
 .reservation_box .reservation_left_box .reservation_item .offer {
@@ -568,13 +577,23 @@ body {
   background-color: #97999b;
   color: #fff;
 }
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_left_box .txt:hover .reservation_item {
+    transform: translateX(0);
+  }
+}
 .reservation_box .reservation_left_box .txt p {
   font-size: 24px;
   font-weight: bolder;
   writing-mode: vertical-lr;
 }
 .reservation_box .reservation_right_box {
-  padding: 100px 0 0 0;
+  padding: 120px 0 0 0;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-30%);
+  }
 }
 .reservation_box .reservation_right_box .collect_list .collect_item .slick-list {
   max-width: 700px;
