--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -5,9 +5,11 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
-.all_body{
+
+.all_body {
   overflow: hidden;
 }
+
 // logo
 .logo {
   width: 1200px;
@@ -146,7 +148,7 @@ body {
             font-weight: bolder;
             background-color: #97999b;
             &:hover {
-              background-color: #A2D7F1;
+              background-color: #a2d7f1;
             }
           }
         }
@@ -623,6 +625,7 @@ body {
       color: #97999b;
       p {
         padding: 5px 5px;
+        cursor: pointer;
       }
       .log_in {
         margin-left: 20px;
@@ -642,10 +645,15 @@ body {
       font-size: 12px;
       display: flex;
       justify-content: space-between;
+      @include rwd(968) {
+        justify-content: inherit;
+      }
       .join_log_in {
         padding: 10px 40px;
+        margin-left: 90px;
         color: #97999b;
         border: 1px solid #97999b;
+        cursor: pointer;
       }
     }
   }
@@ -654,10 +662,15 @@ body {
     font-size: 12px;
     display: flex;
     justify-content: space-between;
+    @include rwd(968) {
+      justify-content: inherit;
+    }
     .visitor_log_in {
       padding: 10px 40px;
+      margin-left: 110px;
       color: #97999b;
       border: 1px solid #97999b;
+      cursor: pointer;
     }
   }
 }
@@ -760,10 +773,20 @@ body {
       input {
         margin-right: 10px;
       }
+
     }
     .email {
       input {
         padding: 5px 10px;
+      }
+      .email_checkbox{
+        width: 100%;
+        @include rwd(876) {
+          width: 70%;
+        }
+        @include rwd(650){
+          width: 50%;
+        }
       }
       p {
         padding-top: 5px;
@@ -775,26 +798,40 @@ body {
     .remark {
       p {
         width: 100px;
+        margin-bottom: 5px;
         vertical-align: text-top;
       }
       textarea {
-        width: 499px;
+        width: 100%;
         height: 311px;
         border: 1px solid #dedede;
+        @include rwd(876) {
+          width: 70%;
+        }
+        @include rwd(650){
+          width: 50%;
+        }
       }
     }
     .join_member {
+      width: 100%;
       padding-top: 50px;
+      margin-left: 100px;
       white-space: nowrap;
       display: flex;
       justify-content: end;
-      @include rwd(768) {
+
+      @include rwd(876) {
         width: 70%;
+      }
+      @include rwd(768){
+        margin-left: 0;
       }
       @include rwd(650) {
         width: 50%;
       }
       p {
+        
         padding: 10px 40px;
         background-color: #97999b;
         color: #eeeeee;
@@ -812,11 +849,12 @@ body {
     .company_tel,
     .company_address {
       input {
+        width: 100%;
         @include rwd(768) {
-          width: 100%;
+          width: 70%;
           margin-top: 10px;
           padding: 8px 0;
-          margin-right:20px;
+          margin-right: 20px;
         }
       }
     }
@@ -837,10 +875,41 @@ body {
           padding: 8px 0;
         }
       }
+      .tel_box{
+        @include rwd(876) {
+          width: 70%;
+        }
+        @include rwd(650){
+          width: 50%;
+        }
+      }
     }
     .tel_phone {
+      @include rwd(768) {
+        margin-top: 8px;
+      }
       input {
         width: 80px;
+      }
+    }
+    .account,
+    .password,
+    .password_confirm,
+    .name,
+    .photo,
+    .fax,
+    .company_name,
+    .position,
+    .compiled,
+    .company_tel,
+    .company_address {
+      input {
+        @include rwd(876) {
+          width: 70%;
+        }
+        @include rwd(650){
+          width: 50%;
+        }
       }
     }
   }
