--- a/style/rooms_item.css
+++ b/style/rooms_item.css
@@ -380,6 +380,11 @@ body {
   justify-content: center;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .reservation_title ul {
+    display: none;
+  }
+}
 .reservation_title ul li {
   padding: 10px 0;
   height: 60px;
@@ -488,14 +493,20 @@ body {
 
 .reservation_box {
   width: 1200px;
+  margin: 0 auto;
   display: flex;
   padding-bottom: 100px;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_left_box {
   padding-right: 100px;
 }
 .reservation_box .reservation_left_box .reservation_left_box_title .title {
-  margin-top: 80px;
+  margin: 80px 0 0 20px;
   font-size: 12px;
 }
 .reservation_box .reservation_left_box .reservation_item {
@@ -595,13 +606,40 @@ body {
     transform: translateX(-30%);
   }
 }
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-60%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-70%);
+  }
+}
 .reservation_box .reservation_right_box .collect_list .collect_item .slick-list {
   max-width: 700px;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .collect_list .collect_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .collect_list .collect_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box .collect_list .collect_item .slick-list {
+    max-width: 400px;
+  }
 }
 .reservation_box .reservation_right_box .collect_list .collect_item .slick-list .slick-track {
   max-width: 600%;
 }
 .reservation_box .reservation_right_box .collect_list .slick-dots {
+  width: 100%;
+  left: auto;
   top: auto;
   bottom: -20px;
 }
@@ -633,6 +671,11 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .collect_introduction {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .collect_introduction p {
   padding: 10px 30px;
@@ -692,19 +735,54 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .collect_order {
+    width: 100%;
+  }
+}
 .reservation_box .reservation_right_box .collect_order p {
   padding: 10px 30px;
   background-color: #97999b;
   color: #fff;
 }
 .reservation_box .reservation_right_box {
-  padding: 100px 0 0 0;
+  padding: 120px 0 0 0;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-30%);
+  }
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-60%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-70%);
+  }
 }
 .reservation_box .reservation_right_box .mountain_list .mountain_item .slick-list {
-  max-width: 800px;
+  max-width: 700px;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .mountain_list .mountain_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .mountain_list .mountain_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box .mountain_list .mountain_item .slick-list {
+    max-width: 400px;
+  }
 }
 .reservation_box .reservation_right_box .mountain_list .mountain_item .slick-list .slick-track {
-  max-width: 500%;
+  max-width: 600%;
 }
 .reservation_box .reservation_right_box .mountain_list .slick-dots {
   top: auto;
@@ -738,6 +816,11 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .mountain_introduction {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .mountain_introduction p {
   padding: 10px 30px;
@@ -797,19 +880,54 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .mountain_order {
+    width: 100%;
+  }
+}
 .reservation_box .reservation_right_box .mountain_order p {
   padding: 10px 30px;
   background-color: #97999b;
   color: #fff;
 }
 .reservation_box .reservation_right_box {
-  padding: 100px 0 0 0;
+  padding: 120px 0 0 0;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-30%);
+  }
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-60%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-70%);
+  }
 }
 .reservation_box .reservation_right_box .morioka_list .morioka_item .slick-list {
-  max-width: 800px;
+  max-width: 700px;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .morioka_list .morioka_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .morioka_list .morioka_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box .morioka_list .morioka_item .slick-list {
+    max-width: 400px;
+  }
 }
 .reservation_box .reservation_right_box .morioka_list .morioka_item .slick-list .slick-track {
-  max-width: 500%;
+  max-width: 600%;
 }
 .reservation_box .reservation_right_box .morioka_list .slick-dots {
   top: auto;
@@ -843,6 +961,11 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .morioka_introduction {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .morioka_introduction p {
   padding: 10px 30px;
@@ -902,16 +1025,51 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .morioka_order {
+    width: 100%;
+  }
+}
 .reservation_box .reservation_right_box .morioka_order p {
   padding: 10px 30px;
   background-color: #97999b;
   color: #fff;
 }
 .reservation_box .reservation_right_box {
-  padding: 100px 0 0 0;
+  padding: 120px 0 0 0;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-30%);
+  }
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-60%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-70%);
+  }
 }
 .reservation_box .reservation_right_box .reflection_list .reflection_item .slick-list {
-  max-width: 800px;
+  max-width: 700px;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .reflection_list .reflection_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .reflection_list .reflection_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box .reflection_list .reflection_item .slick-list {
+    max-width: 400px;
+  }
 }
 .reservation_box .reservation_right_box .reflection_list .reflection_item .slick-list .slick-track {
   max-width: 600%;
@@ -948,6 +1106,11 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .reflection_introduction {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .reflection_introduction p {
   padding: 10px 30px;
@@ -1007,19 +1170,54 @@ body {
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .reflection_order {
+    width: 100%;
+  }
+}
 .reservation_box .reservation_right_box .reflection_order p {
   padding: 10px 30px;
   background-color: #97999b;
   color: #fff;
 }
 .reservation_box .reservation_right_box {
-  padding: 100px 0 0 0;
+  padding: 120px 0 0 0;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-30%);
+  }
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-60%);
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box {
+    transform: translateX(-70%);
+  }
 }
 .reservation_box .reservation_right_box .linshan_list .linshan_item .slick-list {
-  max-width: 800px;
+  max-width: 700px;
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .linshan_list .linshan_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .reservation_box .reservation_right_box .linshan_list .linshan_item .slick-list {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .reservation_box .reservation_right_box .linshan_list .linshan_item .slick-list {
+    max-width: 400px;
+  }
 }
 .reservation_box .reservation_right_box .linshan_list .linshan_item .slick-list .slick-track {
-  max-width: 800%;
+  max-width: 600%;
 }
 .reservation_box .reservation_right_box .linshan_list .slick-dots {
   top: auto;
@@ -1053,6 +1251,11 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .linshan_introduction {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .linshan_introduction p {
   padding: 10px 30px;
@@ -1111,6 +1314,11 @@ body {
   margin-top: 50px;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .reservation_box .reservation_right_box .linshan_order {
+    width: 100%;
+  }
 }
 .reservation_box .reservation_right_box .linshan_order p {
   padding: 10px 30px;
@@ -1221,6 +1429,79 @@ body {
   cursor: pointer;
 }
 
+.safe_ad {
+  width: 30%;
+  height: 60%;
+  padding: 5px;
+  margin-left: -35%;
+  margin-top: 0%;
+  position: fixed;
+  top: 20%;
+  left: 70%;
+  background-color: #fff;
+  text-align: center;
+  z-index: 2;
+  display: block;
+}
+@media screen and (max-width: 1024px) {
+  .safe_ad {
+    width: 70%;
+    height: 92%;
+    margin: 0 auto;
+    top: 2%;
+    left: 15%;
+  }
+}
+.safe_ad.on {
+  display: block;
+}
+.safe_ad .safe_title {
+  padding-top: 20px;
+}
+.safe_ad .safe_title p {
+  font-weight: bolder;
+  font-size: 28px;
+}
+.safe_ad .remind {
+  padding: 0px 10%;
+  margin: 20px 0px;
+  overflow-y: auto;
+  display: flex;
+  color: red;
+}
+.safe_ad .remind p {
+  font-size: 21px;
+  font-weight: bolder;
+  text-align: left;
+}
+.safe_ad .safe_main {
+  padding: 0px 10%;
+  margin: 20px 0px;
+  text-align: left;
+}
+.safe_ad .safe_main p {
+  font-size: 14px;
+}
+.safe_ad .safe_main a {
+  color: blue;
+}
+.safe_ad .safe_ad_main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.safe_ad .safe_close {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  background-color: #fff;
+  position: absolute;
+  top: -18px;
+  right: -18px;
+  z-index: 2;
+  cursor: pointer;
+}
+
 .safe_back {
   width: 100%;
   height: 200vh;
@@ -1229,6 +1510,7 @@ body {
   left: 0;
   background-color: #000;
   opacity: 0.5;
+  z-index: 2;
 }
 .safe_back.on {
   display: block;
