--- a/style/online.css
+++ b/style/online.css
@@ -324,7 +324,7 @@ body {
     background-color: #97999b;
   }
   .menu_item ul li .item_llst p:hover {
-    background-color: #A2D7F1;
+    background-color: #a2d7f1;
   }
   .menu_item ul li:hover .item_llst {
     display: block;
@@ -656,6 +656,8 @@ body {
   margin: 0 auto;
   border: 1px solid #000;
   border-radius: 20px 20px 0 0;
+  /*variables*/
+  /*styles*/
 }
 @media screen and (max-width: 1200px) {
   .rooms_calendar {
@@ -669,77 +671,96 @@ body {
 }
 @media screen and (max-width: 550px) {
   .rooms_calendar {
-    max-width: 480px;
+    max-width: 470px;
+    margin: 0px 5px;
   }
 }
-.rooms_calendar .fc-header-toolbar {
-  position: relative;
-  justify-content: center;
-  margin-bottom: 0 !important;
-  padding-bottom: 1.5em;
-  border-radius: 20px 20px 0 0;
+.rooms_calendar :root {
+  --white: #fff;
+  --main: #eaedf0;
+  --accent: #0041ff;
+  --accent-2: #ebedf0;
 }
-.rooms_calendar .fc-header-toolbar:hover {
-  background: #C0E1FA;
-}
-.rooms_calendar .fc-toolbar-chunk:nth-child(3) {
-  display: none;
-}
-.rooms_calendar .fc-today-button {
-  display: none;
-}
-.rooms_calendar .fc-daygrid-day-top {
+.rooms_calendar body {
+  background-color: var(--main);
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
-.rooms_calendar .fc-next-button {
-  position: absolute !important;
-  right: -300px;
+.rooms_calendar .container {
+  width: 1000px;
+  display: inline-block;
+  background-color: var(--white);
+  border-radius: 35px;
+  padding: 0 1em 0 65px;
 }
-.rooms_calendar .fc-toolbar-title {
-  padding: 0 50px;
-}
-.rooms_calendar .fc-button-primary:not(:disabled):active:focus,
-.rooms_calendar .fc-button-primary:focus {
-  box-shadow: none;
-}
-.rooms_calendar .fc-daygrid-day:hover {
-  background: #C0E1FA;
-}
-.rooms_calendar .fc-scrollgrid-section-header {
-  background: #8a8989;
-  color: #fff;
-}
-.rooms_calendar .fc-scrollgrid-section-header:hover {
-  background: #8a8989;
-}
-.rooms_calendar .fc-scrollgrid-sync-inner {
-  padding: 5px 0;
-}
-.rooms_calendar .fc-daygrid-day-events {
+.rooms_calendar header {
   display: flex;
   justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.rooms_calendar .header-display {
+  display: flex;
+  align-items: center;
+}
+.rooms_calendar .header-display p {
+  color: var(--accent);
+  margin: 5px;
+  font-size: 1.2rem;
+  word-spacing: 0.5rem;
+}
+.rooms_calendar pre {
+  padding: 10px;
+  margin: 0;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--accent);
+}
+.rooms_calendar .days,
+.rooms_calendar .week {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  margin: auto;
+  padding: 0 20px;
+  justify-content: space-between;
+}
+.rooms_calendar .week div,
+.rooms_calendar .days div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  width: 3em;
+  border-radius: 100%;
+}
+.rooms_calendar .days div:hover {
+  background: var(--accent-2);
+  color: rgb(25, 25, 201);
+  cursor: pointer;
+}
+.rooms_calendar .week div {
+  opacity: 0.5;
+}
+.rooms_calendar .current-date {
+  background-color: var(--accent);
+  color: var(--white);
+}
+.rooms_calendar .display-selected {
+  margin-bottom: 10px;
+  padding: 20px 20px;
+  text-align: center;
 }
 
 .collection_day {
-  width: 1200px;
   margin: 0 auto;
   padding-left: 10px;
-}
-@media screen and (max-width: 768px) {
-  .collection_day {
-    width: auto;
-  }
 }
 .collection_day .rooms_days {
   display: flex;
   justify-content: space-evenly;
   position: relative;
   padding: 100px 0 20px 0;
-}
-@media screen and (max-width: 768px) {
-  .collection_day .rooms_days {
-    justify-content: flex-start;
-  }
 }
 .collection_day .rooms_days .form-group {
   display: flex;
@@ -766,7 +787,7 @@ body {
   border-right: 1px dotted #787878;
   width: 1px;
   height: 30px;
-  margin-top: 15px;
+  margin: 15px 5px 0;
 }
 .collection_day .rooms_days .rooms {
   display: flex;
@@ -779,9 +800,11 @@ body {
   height: 19px;
 }
 .collection_day .Next {
+  width: auto;
   display: flex;
   justify-content: end;
   padding-bottom: 100px;
+  margin-right: 20px;
 }
 .collection_day .Next p {
   padding: 10px 40px;
@@ -862,6 +885,11 @@ body {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 1200px) {
+  .footer .title {
+    margin: 0 10px;
+  }
 }
 .footer .title .txt h2 {
   padding: 10px 0;
