--- a/style/online.scss
+++ b/style/online.scss
@@ -5,9 +5,11 @@ body {
   position: relative;
   scroll-behavior: smooth;
 }
-.all_body{
+
+.all_body {
   overflow: hidden;
 }
+
 // logo
 .logo {
   width: 1200px;
@@ -144,7 +146,7 @@ body {
             animation: aa 0.5s forwards;
             background-color: #97999b;
             &:hover {
-              background-color: #A2D7F1;
+              background-color: #a2d7f1;
             }
           }
         }
@@ -197,7 +199,6 @@ body {
     }
   }
 }
-
 
 // reservation_title
 .reservation_title {
@@ -308,12 +309,11 @@ body {
 // process
 .process {
   width: 1000px;
-
   height: 1px;
-  margin: 100px auto 0 ;
+  margin: 100px auto 0;
   background-color: #97999b;
   position: relative;
-  @include rwd(1100){
+  @include rwd(1100) {
     width: auto;
     margin: 100px 50px 0 20px;
   }
@@ -399,10 +399,10 @@ body {
     margin: 0 auto;
     .slick-list {
       max-width: 700px;
-      @include rwd(768){
+      @include rwd(768) {
         max-width: 500px;
       }
-      @include rwd(550){
+      @include rwd(550) {
         max-width: 400px;
       }
       .slick-track {
@@ -438,7 +438,7 @@ body {
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  @include rwd(768){
+  @include rwd(768) {
     width: auto;
     justify-content: center;
   }
@@ -456,7 +456,7 @@ body {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    @include rwd(768){
+    @include rwd(768) {
       padding: 0 20px;
     }
   }
@@ -468,87 +468,113 @@ body {
   margin: 0 auto;
   border: 1px solid #000;
   border-radius: 20px 20px 0 0;
-  @include rwd(1200){
+  @include rwd(1200) {
     max-width: 700px;
   }
-  @include rwd(768){
+  @include rwd(768) {
     max-width: 500px;
   }
-  @include rwd(550){
-    max-width: 480px;
+  @include rwd(550) {
+    max-width: 470px;
+    margin: 0px 5px;
   }
-  .fc-header-toolbar {
-    position: relative;
-    justify-content: center;
-    margin-bottom: 0 !important;
-    padding-bottom: 1.5em;
-    border-radius: 20px 20px 0 0;
-    &:hover{
-      background: #C0E1FA;
-    }
+  /*variables*/
+  :root {
+    --white: #fff;
+    --main: #eaedf0;
+    --accent: #0041ff;
+    --accent-2: #ebedf0;
   }
-  .fc-toolbar-chunk {
-    &:nth-child(3) {
-      display: none;
-    }
-  }
-  .fc-today-button {
-    display: none;
-  }
-  .fc-daygrid-day-top {
+  /*styles*/
+  body {
+    background-color: var(--main);
+    display: flex;
+    align-items: center;
     justify-content: center;
   }
-  .fc-next-button {
-    position: absolute !important;
-    right: -300px;
+  .container {
+    width: 1000px;
+    display: inline-block;
+    background-color: var(--white);
+    border-radius: 35px;
+    padding: 0 1em 0 65px;
   }
-  .fc-toolbar-title {
-    padding: 0 50px;
-  }
-  .fc-button-primary:not(:disabled):active:focus,
-  .fc-button-primary:focus {
-    box-shadow: none;
-  }
-  .fc-daygrid-day{
-    &:hover{
-      background: #C0E1FA;
-    }
-  }
-  .fc-scrollgrid-section-header{
-    background: #8a8989;
-    color: #fff;
-    &:hover{
-      background: #8a8989;
-    }
-  }
-  .fc-scrollgrid-sync-inner{
-    padding: 5px 0;
-  }
-  .fc-daygrid-day-events{
+  header {
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding: 10px;
+  }
+  .header-display {
+    display: flex;
+    align-items: center;
+  }
+  .header-display p {
+    color: var(--accent);
+    margin: 5px;
+    font-size: 1.2rem;
+    word-spacing: 0.5rem;
+  }
+  pre {
+    padding: 10px;
+    margin: 0;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: var(--accent);
+  }
+  .days,
+  .week {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin: auto;
+    padding: 0 20px;
+    justify-content: space-between;
+    
+  }
+  .week div,
+  .days div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 3em;
+    border-radius: 100%;
+  }
+  .days div:hover {
+    background: var(--accent-2);
+    color: rgb(25, 25, 201);
+    cursor: pointer;
+  }
+  .week div {
+    opacity: 0.5;
+  }
+  .current-date {
+    background-color: var(--accent);
+    color: var(--white);
+  }
+  .display-selected {
+    margin-bottom: 10px;
+    padding: 20px 20px;
+    text-align: center;
   }
 }
 
 // collection_day
 .collection_day {
-  width: 1200px;
+  // width: 1200px;
   margin: 0 auto;
   padding-left: 10px;
-  @include rwd(768){
-    width: auto;
-  }
   .rooms_days {
     display: flex;
     justify-content: space-evenly;
     position: relative;
     padding: 100px 0 20px 0;
-    @include rwd(768){
-      justify-content: flex-start
-    }
-    .form-group{
+    // @include rwd(768){
+    //   justify-content: flex-start
+    // }
+    .form-group {
       display: flex;
-      select{
+      select {
         height: 19px;
       }
     }
@@ -561,7 +587,7 @@ body {
     }
     span {
       padding: 0 10px;
-      @include rwd(768){
+      @include rwd(768) {
         padding: 0 5px;
       }
     }
@@ -569,7 +595,7 @@ body {
       border-right: 1px dotted #787878;
       width: 1px;
       height: 30px;
-      margin-top: 15px;
+      margin: 15px 5px 0;
     }
     .rooms {
       display: flex;
@@ -583,15 +609,16 @@ body {
     }
   }
   .Next {
+    width: auto;
     display: flex;
     justify-content: end;
     padding-bottom: 100px;
+    margin-right: 20px;
     p {
       padding: 10px 40px;
       background-color: #97999b;
       font-size: 14px;
       color: #fff;
-     
     }
   }
 }
@@ -603,7 +630,7 @@ body {
   border-left: 8px solid #97999b;
   display: flex;
   justify-content: space-between;
-  @include rwd(768){
+  @include rwd(768) {
     width: auto;
   }
   p {
@@ -624,7 +651,7 @@ body {
   width: 1200px;
   margin: 20px auto 0;
   padding-left: 20px;
-  @include rwd(768){
+  @include rwd(768) {
     width: auto;
   }
   .collect_rooms {
@@ -665,6 +692,9 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    @include rwd(1200) {
+      margin: 0 10px;
+    }
     .txt {
       h2 {
         padding: 10px 0;
