--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -369,6 +369,9 @@ body {
           .in_rooms_day {
             display: flex;
           }
+          span{
+            padding: 0 5px;
+          }
         }
       }
     }
@@ -929,6 +932,9 @@ body {
     padding: 0 20px;
     display: flex;
     justify-content: space-between;
+    @include rwd(1200){
+      margin: 0 10px;
+    }
     .txt {
       h2 {
         padding: 10px 0;
